[NO-TICKET] fixed homepage layout break

--- a/assets/scss/FreeLesson.scss
+++ b/assets/scss/FreeLesson.scss
@@ -6,5 +6,6 @@
 @media (min-width: 960px) {
   .free-trial-icon {
     width: 200px;
+    margin-right: 50px;
   }
 }
